# Epoch

./: .env.example  .gitignore  Assignment.md  CLAUDE.md  Notes.md  Plan.md  README.md  pyproject.toml  requirements.txt  testing.ipynb
configs/: benchmark_references.json  claude_scraping.yaml  default.yaml  developer_blacklist.json  developer_exclusion_criteria.json  flop_estimation_methods.json  manual_entry_fields.json  model_name_mapping.yaml
configs/benchmark_sources/: chinese_benchmarks.json  template.json  video_benchmarks.json
configs/scrapers/: lmarena.json  olympic_arena.json  openlm_arena.json  physics_iq.json  superclue.json  video_arena.json
data/benchmark_files/: OlympicArena.html  PhysicsIQ.html  SuperCLUE.html  VideoArena.html
data/clean/: above_1e25_flop.csv  below_1e25_flop.csv
data/estimated/: estimated_models.json
data/published/: published_data.csv
data/query_results/: models_above_1e25_flop_20250729_123438.csv  models_above_1e25_flop_20250731_095800.csv  models_above_1e25_flop_20250731_105528.csv  models_above_1e25_flop_20250731_110051.csv  models_above_1e25_flop_20250731_111636.csv  models_above_1e25_flop_20250731_114335.csv  models_above_1e25_flop_20250731_115146.csv  models_above_1e25_flop_20250731_115202.csv  models_above_1e25_flop_20250731_115746.csv  models_above_1e25_flop_20250731_121805.csv  models_above_1e25_flop_20250731_123655.csv  models_above_1e25_flop_20250731_123742.csv
data/scraped/: lmarena_models.json  olympic_arena_models.json  openlm_arena_models.json  physics_iq_models.json  superclue_models.json  video_arena_models.json
data/staging/: above_1e25_flop_staging.csv  above_1e25_flop_staging.csv.backup
docs/: adding_benchmark_references.md  ai_models_above_1e25_documentation.md  benchmark_integration.md  claude_integration.md  compute_estimation_methods.md  core_dataset_management.md  data_pipeline.md  flop_estimation_guide.md  proposed_documentation_changes.md  review_workflow.md  scraper_architecture.md  setup.md  staging_published_sync.md
scripts/: estimate_flops.py  fetch_lmarena_data.py  fetch_openlm_data.py  get_latest_model_data.py  manual_model_entry.py  query_models.py  refresh_core_dataset.py  run.py  test_compute_estimator.py  update_claude_benchmarks.py
src/epoch_tracker/: __init__.py
(+48 files in other folders)
