[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epoch_tracker"
version = "0.1.0"
description = "System for tracking AI models trained with over 1e25 FLOP"
authors = [{name = "Epoch AI"}]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "python-dateutil>=2.8.0",
    "huggingface-hub>=0.17.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.0",
    "lxml>=6.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.23.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"